--- a/code/OrderService/pom.xml
+++ b/code/OrderService/pom.xml
@@ -9,10 +9,10 @@
 		<version>2.4.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.javamonk.estore</groupId>
-	<artifactId>ProductService</artifactId>
+	<groupId>com.javamonks.estore</groupId>
+	<artifactId>OrderService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ProductService</name>
+	<name>OrderService</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -72,7 +72,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>com.javamonks.estore</groupId>
 			<artifactId>core</artifactId>
