--- a/code/OrderService/src/main/resources/application.properties
+++ b/code/OrderService/src/main/resources/application.properties
@@ -1,26 +1,28 @@
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.application.name=product-service
-eureka.instance.prefer-ip-address=true
 server.port=0
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=orders-service
 eureka.instance.instance-id=${spring.application.name}:${instanceId:${random.value}}
 
-
-#DB setup
-spring.datasource.url=jdbc:h2:file:~/products;AUTO_SERVER=true
+spring.datasource.url=jdbc:h2:file:~/orders-dev;AUTO_SERVER=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-axon.axonserver.enabled=false
 spring.h2.console.settings.web-allow-others=true
-
 
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-axon.eventhandling.processors.product-group.mode=subscribing
+axon.axonserver.enabled=false
+
+axon.eventhandling.processors.order-group.mode=subscribing
+
+
+
+
+
+
+#axon.axonserver.token=123abc
