Changes eventstore to mongoDb

--- a/code/OrderService/src/main/resources/application.properties
+++ b/code/OrderService/src/main/resources/application.properties
@@ -16,10 +16,14 @@ spring.h2.console.settings.web-allow-others=true
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-axon.axonserver.enabled=false
+axon.axonserver.enabled=true
 
 axon.eventhandling.processors.order-group.mode=subscribing
 
+#Mongo DB for eventstore
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user
 
 
 
