--- a/code/ProductService/src/main/resources/application.properties
+++ b/code/ProductService/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-axon.axonserver.enabled=false
+axon.axonserver.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
 
@@ -24,3 +24,9 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 axon.eventhandling.processors.product-group.mode=subscribing
+
+#Mongo DB for eventstore
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user
+
