--- a/code/UserService/src/main/resources/application.properties
+++ b/code/UserService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-axon.axonserver.enabled=false
+axon.axonserver.enabled=true
+
+#Mongo DB for eventstore
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user
