--- a/code/PaymentsService/src/main/resources/application.properties
+++ b/code/PaymentsService/src/main/resources/application.properties
@@ -9,4 +9,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-axon.axonserver.enabled=false
+axon.axonserver.enabled=true
+
+#Mongo DB for eventstore
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user
+
