--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.axonframework.extensions.mongo</groupId>
+			<artifactId>axon-mongo</artifactId>
+			<version>4.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
