deadline,snapshot,and event replay code

--- a/code/ProductService/src/main/resources/application.properties
+++ b/code/ProductService/src/main/resources/application.properties
@@ -24,9 +24,13 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 axon.eventhandling.processors.product-group.mode=subscribing
+# for tracking value should be tracking
+#axon.eventhandling.processors.product-group.mode=tracking
 
 #Mongo DB for eventstore
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=user
+
+logging.level.org.axonframework.axonserver.connector.event.axon.AxonServerEventStore=DEBUG
 
